FIFA ratings closed

--- a/ipynb_files/fifa_ratings.ipynb
+++ b/ipynb_files/fifa_ratings.ipynb
@@ -1409,7 +1409,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Virgil van Dijk', 'Karim Benzema', 'Lionel Messi', 'Antoine Griezmann', 'Kevin De Bruyne', 'Cristiano Ronaldo', 'Vinícius Júnior', 'Eden Hazard', 'Jorginho', 'Harry Kane', 'Robert Lewandowski', 'Mohamed Salah', 'Raphaël Varane', 'Thibaut Courtois', 'Bernardo Silva', 'Kylian Mbappé', 'Luka Modrić', 'Gianluigi Donnarumma', \"N'Golo Kanté\", 'Erling Haaland', 'Neymar', 'Sadio Mané', 'Gianluigi Buffon', 'Alisson', 'Riyad Mahrez', 'Sergio Ramos'}\n"
+      "{'Gianluigi Buffon', 'Erling Haaland', 'Jorginho', 'Mohamed Salah', 'Bernardo Silva', 'Sergio Ramos', 'Neymar', 'Harry Kane', 'Thibaut Courtois', \"N'Golo Kanté\", 'Antoine Griezmann', 'Kevin De Bruyne', 'Karim Benzema', 'Virgil van Dijk', 'Gianluigi Donnarumma', 'Luka Modrić', 'Eden Hazard', 'Kylian Mbappé', 'Raphaël Varane', 'Robert Lewandowski', 'Alisson', 'Sadio Mané', 'Cristiano Ronaldo', 'Lionel Messi', 'Vinícius Júnior', 'Riyad Mahrez'}\n"
      ]
     }
    ],
@@ -1447,32 +1447,32 @@
     {
      "data": {
       "text/plain": [
-       "{'Virgil van Dijk': '.*Virgil.*van.*Dijk.*',\n",
-       " 'Karim Benzema': '.*Karim.*Benzema.*',\n",
-       " 'Lionel Messi': '.*Lionel.*Messi.*',\n",
+       "{'Gianluigi Buffon': '.*Gianluigi.*Buffon.*',\n",
+       " 'Erling Haaland': '.*Erling.*Haaland.*',\n",
+       " 'Jorginho': '.*Jorginho.*',\n",
+       " 'Mohamed Salah': '.*Mohamed.*Salah.*',\n",
+       " 'Bernardo Silva': '.*Bernardo.*Silva.*',\n",
+       " 'Sergio Ramos': '.*Sergio.*Ramos.*',\n",
+       " 'Neymar': '.*Neymar.*',\n",
+       " 'Harry Kane': '.*Harry.*Kane.*',\n",
+       " 'Thibaut Courtois': '.*Thibaut.*Courtois.*',\n",
+       " \"N'Golo Kanté\": \".*N'Golo.*Kanté.*\",\n",
        " 'Antoine Griezmann': '.*Antoine.*Griezmann.*',\n",
        " 'Kevin De Bruyne': '.*Kevin.*De.*Bruyne.*',\n",
-       " 'Cristiano Ronaldo': '.*Cristiano.*Ronaldo.*',\n",
-       " 'Vinícius Júnior': '.*Vinícius.*Júnior.*',\n",
-       " 'Eden Hazard': '.*Eden.*Hazard.*',\n",
-       " 'Jorginho': '.*Jorginho.*',\n",
-       " 'Harry Kane': '.*Harry.*Kane.*',\n",
-       " 'Robert Lewandowski': '.*Robert.*Lewandowski.*',\n",
-       " 'Mohamed Salah': '.*Mohamed.*Salah.*',\n",
-       " 'Raphaël Varane': '.*Raphaël.*Varane.*',\n",
-       " 'Thibaut Courtois': '.*Thibaut.*Courtois.*',\n",
-       " 'Bernardo Silva': '.*Bernardo.*Silva.*',\n",
-       " 'Kylian Mbappé': '.*Kylian.*Mbappé.*',\n",
-       " 'Luka Modrić': '.*Luka.*Modrić.*',\n",
+       " 'Karim Benzema': '.*Karim.*Benzema.*',\n",
+       " 'Virgil van Dijk': '.*Virgil.*van.*Dijk.*',\n",
        " 'Gianluigi Donnarumma': '.*Gianluigi.*Donnarumma.*',\n",
-       " \"N'Golo Kanté\": \".*N'Golo.*Kanté.*\",\n",
-       " 'Erling Haaland': '.*Erling.*Haaland.*',\n",
-       " 'Neymar': '.*Neymar.*',\n",
-       " 'Sadio Mané': '.*Sadio.*Mané.*',\n",
-       " 'Gianluigi Buffon': '.*Gianluigi.*Buffon.*',\n",
+       " 'Luka Modrić': '.*Luka.*Modrić.*',\n",
+       " 'Eden Hazard': '.*Eden.*Hazard.*',\n",
+       " 'Kylian Mbappé': '.*Kylian.*Mbappé.*',\n",
+       " 'Raphaël Varane': '.*Raphaël.*Varane.*',\n",
+       " 'Robert Lewandowski': '.*Robert.*Lewandowski.*',\n",
        " 'Alisson': '.*Alisson.*',\n",
-       " 'Riyad Mahrez': '.*Riyad.*Mahrez.*',\n",
-       " 'Sergio Ramos': '.*Sergio.*Ramos.*'}"
+       " 'Sadio Mané': '.*Sadio.*Mané.*',\n",
+       " 'Cristiano Ronaldo': '.*Cristiano.*Ronaldo.*',\n",
+       " 'Lionel Messi': '.*Lionel.*Messi.*',\n",
+       " 'Vinícius Júnior': '.*Vinícius.*Júnior.*',\n",
+       " 'Riyad Mahrez': '.*Riyad.*Mahrez.*'}"
       ]
      },
      "execution_count": 23,
@@ -1595,7 +1595,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Virgil van Dijk', 'Cristiano Ronaldo dos Santos Aveiro', 'Kylian Mbappé Lottin', 'Mohamed Salah Ghaly', 'Sadio Mané', 'Lionel Andrés Messi Cuccittini', 'Bernardo Mota Veiga de Carvalho e Silva', 'Robert Lewandowski', 'Riyad Mahrez', 'Alisson Ramsés Becker']\n"
+      "['Mohamed Salah Ghaly', 'Virgil van Dijk', 'Bernardo Mota Veiga de Carvalho e Silva', 'Kylian Mbappé Lottin', 'Lionel Andrés Messi Cuccittini', 'Riyad Mahrez', 'Robert Lewandowski', 'Sadio Mané', 'Alisson Ramsés Becker', 'Cristiano Ronaldo dos Santos Aveiro']\n"
      ]
     }
    ],
@@ -2108,7 +2108,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/lr/stnkft6j5ps6pysrw7v0cgp80000gn/T/ipykernel_1525/30412018.py:9: SettingWithCopyWarning: \n",
+      "/var/folders/lr/stnkft6j5ps6pysrw7v0cgp80000gn/T/ipykernel_4230/30412018.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -2542,7 +2542,7 @@
     "        info_dict['points'].append(classification[(classification['Player'] == info_dict['short_name'][i])]['Points'][i])\n",
     "\n",
     "    merged_info = pd.DataFrame(info_dict)\n",
-    "    merged_info = merged_info.sort_values(by=[\"fifa_index\"])\n",
+    "    merged_info = merged_info.sort_values(by=['fifa_index'])\n",
     "    merged_info = merged_info.reset_index(drop = True)\n",
     "    df = df.join(merged_info['points'])\n",
     "\n",
@@ -3343,7 +3343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3378,7 +3378,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fifa_ratings_2017 = general_position(fifa_ratings_2017)\n",
+    "fifa_ratings_2018 = general_position(fifa_ratings_2018)\n",
+    "fifa_ratings_2019 = general_position(fifa_ratings_2019)\n",
+    "fifa_ratings_2021 = general_position(fifa_ratings_2021)\n",
+    "fifa_ratings_2022 = general_position(fifa_ratings_2022)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3389,15 +3402,18 @@
     "    Accepts the dataframe as argument and \n",
     "    Returns the new dataframe of GK's while removes the GK from the original df.\n",
     "    \"\"\"\n",
-    "    #\n",
-    "    fifa_gk = df[(df['player_positions']) == \"GK\"]\n",
-    "    df = df.drop(df[df['player_positions'] == 'GK'])\n",
+    "    fifa_gk = df[(df['player_positions'] == \"GK\")]\n",
+    "    fifa_gk.reset_index(drop = True, inplace = True)\n",
+    "\n",
+    "    GK_condition = df[(df['player_positions'] == \"GK\")].index\n",
+    "    df = df.drop(GK_condition)\n",
+    "\n",
     "    return fifa_gk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3418,7 +3434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3497,7 +3513,7 @@
        "      <td>Alisson</td>\n",
        "      <td>Alisson Ramsés Becker</td>\n",
        "      <td>GK</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>GK</td>\n",
        "      <td>85</td>\n",
        "      <td>36500000.0</td>\n",
        "      <td>110000.0</td>\n",
@@ -3521,7 +3537,7 @@
        "      <td>G. Donnarumma</td>\n",
        "      <td>Gianluigi Donnarumma</td>\n",
        "      <td>GK</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>GK</td>\n",
        "      <td>85</td>\n",
        "      <td>93500000.0</td>\n",
        "      <td>34000.0</td>\n",
@@ -3545,7 +3561,7 @@
        "      <td>T. Courtois</td>\n",
        "      <td>Thibaut Nicolas Marc Courtois</td>\n",
        "      <td>GK</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>GK</td>\n",
        "      <td>89</td>\n",
        "      <td>85500000.0</td>\n",
        "      <td>250000.0</td>\n",
@@ -3576,9 +3592,9 @@
        "\n",
        "  player_positions general_position  overall   value_eur  wage_eur  age  ...  \\\n",
        "0               GK               GK       88   9000000.0  120000.0   38  ...   \n",
-       "1               GK              NaN       85  36500000.0  110000.0   25  ...   \n",
-       "2               GK              NaN       85  93500000.0   34000.0   21  ...   \n",
-       "3               GK              NaN       89  85500000.0  250000.0   29  ...   \n",
+       "1               GK               GK       85  36500000.0  110000.0   25  ...   \n",
+       "2               GK               GK       85  93500000.0   34000.0   21  ...   \n",
+       "3               GK               GK       89  85500000.0  250000.0   29  ...   \n",
        "\n",
        "   dribbling  defending physic goalkeeping_diving goalkeeping_handling  \\\n",
        "0        NaN        NaN    NaN                 87                   88   \n",
@@ -3601,7 +3617,7 @@
        "[4 rows x 32 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3621,7 +3637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
