--- a/ipynb_files/fifa_ratings.ipynb
+++ b/ipynb_files/fifa_ratings.ipynb
@@ -1409,7 +1409,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Gianluigi Buffon', 'Erling Haaland', 'Jorginho', 'Mohamed Salah', 'Bernardo Silva', 'Sergio Ramos', 'Neymar', 'Harry Kane', 'Thibaut Courtois', \"N'Golo Kanté\", 'Antoine Griezmann', 'Kevin De Bruyne', 'Karim Benzema', 'Virgil van Dijk', 'Gianluigi Donnarumma', 'Luka Modrić', 'Eden Hazard', 'Kylian Mbappé', 'Raphaël Varane', 'Robert Lewandowski', 'Alisson', 'Sadio Mané', 'Cristiano Ronaldo', 'Lionel Messi', 'Vinícius Júnior', 'Riyad Mahrez'}\n"
+      "{'Bernardo Silva', \"N'Golo Kanté\", 'Thibaut Courtois', 'Alisson', 'Sadio Mané', 'Antoine Griezmann', 'Raphaël Varane', 'Karim Benzema', 'Vinícius Júnior', 'Virgil van Dijk', 'Robert Lewandowski', 'Gianluigi Buffon', 'Luka Modrić', 'Eden Hazard', 'Jorginho', 'Harry Kane', 'Sergio Ramos', 'Neymar', 'Gianluigi Donnarumma', 'Lionel Messi', 'Mohamed Salah', 'Cristiano Ronaldo', 'Kylian Mbappé', 'Kevin De Bruyne', 'Riyad Mahrez', 'Erling Haaland'}\n"
      ]
     }
    ],
@@ -1447,32 +1447,32 @@
     {
      "data": {
       "text/plain": [
-       "{'Gianluigi Buffon': '.*Gianluigi.*Buffon.*',\n",
-       " 'Erling Haaland': '.*Erling.*Haaland.*',\n",
-       " 'Jorginho': '.*Jorginho.*',\n",
-       " 'Mohamed Salah': '.*Mohamed.*Salah.*',\n",
-       " 'Bernardo Silva': '.*Bernardo.*Silva.*',\n",
-       " 'Sergio Ramos': '.*Sergio.*Ramos.*',\n",
-       " 'Neymar': '.*Neymar.*',\n",
-       " 'Harry Kane': '.*Harry.*Kane.*',\n",
-       " 'Thibaut Courtois': '.*Thibaut.*Courtois.*',\n",
+       "{'Bernardo Silva': '.*Bernardo.*Silva.*',\n",
        " \"N'Golo Kanté\": \".*N'Golo.*Kanté.*\",\n",
-       " 'Antoine Griezmann': '.*Antoine.*Griezmann.*',\n",
-       " 'Kevin De Bruyne': '.*Kevin.*De.*Bruyne.*',\n",
-       " 'Karim Benzema': '.*Karim.*Benzema.*',\n",
-       " 'Virgil van Dijk': '.*Virgil.*van.*Dijk.*',\n",
-       " 'Gianluigi Donnarumma': '.*Gianluigi.*Donnarumma.*',\n",
-       " 'Luka Modrić': '.*Luka.*Modrić.*',\n",
-       " 'Eden Hazard': '.*Eden.*Hazard.*',\n",
-       " 'Kylian Mbappé': '.*Kylian.*Mbappé.*',\n",
-       " 'Raphaël Varane': '.*Raphaël.*Varane.*',\n",
-       " 'Robert Lewandowski': '.*Robert.*Lewandowski.*',\n",
+       " 'Thibaut Courtois': '.*Thibaut.*Courtois.*',\n",
        " 'Alisson': '.*Alisson.*',\n",
        " 'Sadio Mané': '.*Sadio.*Mané.*',\n",
-       " 'Cristiano Ronaldo': '.*Cristiano.*Ronaldo.*',\n",
-       " 'Lionel Messi': '.*Lionel.*Messi.*',\n",
+       " 'Antoine Griezmann': '.*Antoine.*Griezmann.*',\n",
+       " 'Raphaël Varane': '.*Raphaël.*Varane.*',\n",
+       " 'Karim Benzema': '.*Karim.*Benzema.*',\n",
        " 'Vinícius Júnior': '.*Vinícius.*Júnior.*',\n",
-       " 'Riyad Mahrez': '.*Riyad.*Mahrez.*'}"
+       " 'Virgil van Dijk': '.*Virgil.*van.*Dijk.*',\n",
+       " 'Robert Lewandowski': '.*Robert.*Lewandowski.*',\n",
+       " 'Gianluigi Buffon': '.*Gianluigi.*Buffon.*',\n",
+       " 'Luka Modrić': '.*Luka.*Modrić.*',\n",
+       " 'Eden Hazard': '.*Eden.*Hazard.*',\n",
+       " 'Jorginho': '.*Jorginho.*',\n",
+       " 'Harry Kane': '.*Harry.*Kane.*',\n",
+       " 'Sergio Ramos': '.*Sergio.*Ramos.*',\n",
+       " 'Neymar': '.*Neymar.*',\n",
+       " 'Gianluigi Donnarumma': '.*Gianluigi.*Donnarumma.*',\n",
+       " 'Lionel Messi': '.*Lionel.*Messi.*',\n",
+       " 'Mohamed Salah': '.*Mohamed.*Salah.*',\n",
+       " 'Cristiano Ronaldo': '.*Cristiano.*Ronaldo.*',\n",
+       " 'Kylian Mbappé': '.*Kylian.*Mbappé.*',\n",
+       " 'Kevin De Bruyne': '.*Kevin.*De.*Bruyne.*',\n",
+       " 'Riyad Mahrez': '.*Riyad.*Mahrez.*',\n",
+       " 'Erling Haaland': '.*Erling.*Haaland.*'}"
       ]
      },
      "execution_count": 23,
@@ -1595,7 +1595,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Mohamed Salah Ghaly', 'Virgil van Dijk', 'Bernardo Mota Veiga de Carvalho e Silva', 'Kylian Mbappé Lottin', 'Lionel Andrés Messi Cuccittini', 'Riyad Mahrez', 'Robert Lewandowski', 'Sadio Mané', 'Alisson Ramsés Becker', 'Cristiano Ronaldo dos Santos Aveiro']\n"
+      "['Kylian Mbappé Lottin', 'Lionel Andrés Messi Cuccittini', 'Mohamed Salah Ghaly', 'Bernardo Mota Veiga de Carvalho e Silva', 'Alisson Ramsés Becker', 'Sadio Mané', 'Riyad Mahrez', 'Virgil van Dijk', 'Robert Lewandowski', 'Cristiano Ronaldo dos Santos Aveiro']\n"
      ]
     }
    ],
@@ -2108,7 +2108,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/lr/stnkft6j5ps6pysrw7v0cgp80000gn/T/ipykernel_4230/30412018.py:9: SettingWithCopyWarning: \n",
+      "/var/folders/lr/stnkft6j5ps6pysrw7v0cgp80000gn/T/ipykernel_4799/30412018.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -3404,10 +3404,6 @@
     "    \"\"\"\n",
     "    fifa_gk = df[(df['player_positions'] == \"GK\")]\n",
     "    fifa_gk.reset_index(drop = True, inplace = True)\n",
-    "\n",
-    "    GK_condition = df[(df['player_positions'] == \"GK\")].index\n",
-    "    df = df.drop(GK_condition)\n",
-    "\n",
     "    return fifa_gk"
    ]
   },
@@ -3628,6 +3624,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# After this step, we remove GK's from the FIFA ratings dataframe, where we will only keep field players.\n",
+    "def GK_remover_df (fifa_ratings_df):\n",
+    "    \"\"\"\n",
+    "    Function that removes instances of GoalKeepers from the FIFA ratings dataframes, since the original \n",
+    "    funct was unable to perform this utility apart from filtering the origingal df to create another one just for GK'set\n",
+    "    Accepts a FIFA ratings df\n",
+    "    Returns it without GK instances\n",
+    "    \"\"\"\n",
+    "    # Define removing condition to apply it to the df\n",
+    "    GK_condition = fifa_ratings_df[(fifa_ratings_df['player_positions'] == \"GK\")].index\n",
+    "    fifa_ratings_df.drop(GK_condition, inplace = True)\n",
+    "    return fifa_ratings_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fifa17 = GK_remover_df(fifa_ratings_2017)\n",
+    "fifa18 = GK_remover_df(fifa_ratings_2018)\n",
+    "fifa19 = GK_remover_df(fifa_ratings_2019)\n",
+    "fifa21 = GK_remover_df(fifa_ratings_2021)\n",
+    "fifa22 = GK_remover_df(fifa_ratings_2022)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -3637,16 +3666,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fifa_ratings_2017.to_csv(\"fifa_17.csv\")\n",
-    "fifa_ratings_2018.to_csv(\"fifa_18.csv\")\n",
-    "fifa_ratings_2018.to_csv(\"fifa_19.csv\")\n",
-    "fifa_ratings_2021.to_csv(\"fifa_21.csv\")\n",
-    "fifa_ratings_2022.to_csv(\"fifa_22.csv\")\n",
-    "fifa_gk.to_csv(\"fifa_gk.csv\")"
+    "fifa17.to_csv(\"../csv_files/fifa17.csv\") \n",
+    "fifa18.to_csv(\"../csv_files/fifa18.csv\")\n",
+    "fifa18.to_csv(\"../csv_files/fifa19.csv\")\n",
+    "fifa21.to_csv(\"../csv_files/fifa21.csv\")\n",
+    "fifa22.to_csv(\"../csv_files/fifa22.csv\")\n",
+    "fifa_gk.to_csv(\"../csv_files/fifagk.csv\")"
    ]
   }
  ],
