FIFA 19 is the closest to 2020

--- a/ipynb_files/fifa_ratings.ipynb
+++ b/ipynb_files/fifa_ratings.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,8 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import re\n",
-    "import sys"
+    "import sys\n",
+    "import numpy as np"
    ]
   },
   {
@@ -3713,6 +3714,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Appendix\n",
+    "\n",
+    "As a last part of this process, we define a function that compares all datasets with Ballon d'Or points with the FIFA 2020 ratings, year in which there was not Ballon d'Or award.\n",
+    "This comparison (made with the sum of squared differences of every variable mean), will allow us to choose which regression model will be used to predict 2020's Ballon d'Or winner according to FIFA stats. We will take the dataframe that gives the least sum of squared differences."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
@@ -4657,15 +4669,61 @@
     }
    ],
    "source": [
+    "# This is the FIFA 20 game ratings: 30 best players are the nominees for the Ballon d'Or that was not awarded.\n",
+    "# We will use .describe() method to get the reference mean values.\n",
     "fifa_20"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Squared deviations sum function with respect to 2020's mean values per variable.\n",
+    "def squared_error (df):\n",
+    "    \"\"\"\n",
+    "    We'll use this function to take a FIFA ratings dataset as reference to make our 2020 Ballon d'Or prediction.\n",
+    "    This function takes a dataframe as argument and\n",
+    "    Returns the sum of the squared deviations of its variables' means with respect to 2020's\n",
+    "    \"\"\"\n",
+    "    list1 = list(fifa_20.describe().loc['mean'])\n",
+    "    list2 = list(df.describe().loc['mean'])\n",
+    "    \n",
+    "    sum_of_square_differences = [(list1[i] - list2[i])**2 for i in range(len(list1))]\n",
+    "\n",
+    "    return sum([x for x in sum_of_square_differences if str(x) != 'nan'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error17 = squared_error(fifa17)\n",
+    "error18 = squared_error(fifa18)\n",
+    "error19 = squared_error(fifa19)\n",
+    "error21 = squared_error(fifa21)\n",
+    "error22 = squared_error(fifa22)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The minimal error is: 1150864785320.2021, corresponding toat 2019\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The minimal error is: {min(error22, error17, error18, error19, error21)}, corresponding to 2019.\")"
+   ]
   }
  ],
  "metadata": {
