--- a/ipynb_files/fifa_ratings.ipynb
+++ b/ipynb_files/fifa_ratings.ipynb
@@ -3658,28 +3658,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We export the 6 dataframes and close this part of the project.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fifa17.to_csv(\"../csv_files/fifa17.csv\") \n",
-    "fifa18.to_csv(\"../csv_files/fifa18.csv\")\n",
-    "fifa18.to_csv(\"../csv_files/fifa19.csv\")\n",
-    "fifa21.to_csv(\"../csv_files/fifa21.csv\")\n",
-    "fifa22.to_csv(\"../csv_files/fifa22.csv\")\n",
-    "fifa_gk.to_csv(\"../csv_files/fifagk.csv\")"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
@@ -4710,19 +4688,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The minimal error is: 1150864785320.2021, corresponding toat 2019\n"
+      "The minimal error is: 1150864785320.2021, corresponding to 2019.\n"
      ]
     }
    ],
    "source": [
     "print(f\"The minimal error is: {min(error22, error17, error18, error19, error21)}, corresponding to 2019.\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We export all 6 dataframes and close this part of the project."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fifa17.to_csv(\"../csv_files/fifa17.csv\")\n",
+    "fifa18.to_csv(\"../csv_files/fifa18.csv\")\n",
+    "fifa19.to_csv(\"../csv_files/fifa19.csv\")\n",
+    "fifa21.to_csv(\"../csv_files/fifa21.csv\")\n",
+    "fifa22.to_csv(\"../csv_files/fifa22.csv\")\n",
+    "fifa_gk.to_csv(\"../csv_files/fifagk.csv\")"
    ]
   }
  ],
