working on regression, visualizations ok, readme almost

--- a/ipynb_files/fifa_ratings.ipynb
+++ b/ipynb_files/fifa_ratings.ipynb
@@ -4724,6 +4724,16 @@
     "fifa22.to_csv(\"../csv_files/fifa22.csv\")\n",
     "fifa_gk.to_csv(\"../csv_files/fifagk.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We also export 2020'set\n",
+    "fifa_20.to_csv('../csv_files/fifa20.csv')"
+   ]
   }
  ],
  "metadata": {
